--- a/bewell-frontend/public/index.html
+++ b/bewell-frontend/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- <meta name="referrer" content="strict-origin-when-cross-origin" /> -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- <meta name="google-signin-client_id" content="240089534787-dro0lkk7qfs3oiadsrqo42jl140d9nnq.apps.googleusercontent.com"> -->
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -25,7 +27,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+   
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
