--- a/bewell-frontend/public/index.html
+++ b/bewell-frontend/public/index.html
@@ -28,7 +28,7 @@
     -->
     <title>React App</title>
    
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://accounts.google.com/gsi/client"></script>
     
   </head>
   <body>
